Added logging and documentation to public interface.